--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -8,7 +8,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="export/BnA Project.html"
+export_path=".export/v5/index.html"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -21,7 +21,7 @@ custom_template/release=""
 variant/extensions_support=false
 vram_texture_compression/for_desktop=true
 vram_texture_compression/for_mobile=false
-html/export_icon=false
+html/export_icon=true
 html/custom_html_shell=""
 html/head_include=""
 html/canvas_resize_policy=2
@@ -29,7 +29,7 @@ html/focus_canvas_on_start=true
 html/experimental_virtual_keyboard=false
 progressive_web_app/enabled=false
 progressive_web_app/offline_page=""
-progressive_web_app/display=1
+progressive_web_app/display=3
 progressive_web_app/orientation=0
 progressive_web_app/icon_144x144=""
 progressive_web_app/icon_180x180=""
